--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <body>
     <h1>
       Witaj na mojej stronie
+      Witaj na mojej stronie
+      Witaj na mojej stronie
     </h1>
     <script type="text/javascript" src="js/name.js"></script>
   </body>
