powrot do name.js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>
       Witaj na mojej stronie
     </h1>
-    <script type="text/javascript" src="js/trojkat.js"></script>
+    <script type="text/javascript" src="js/name.js"></script>
   </body>
 </html>
