--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title> Tytuł strony </title>
-    <link rel="stylesheet" href="css/style.css">
+    
   </head>
   <body>
     <h1>
       Witaj na mojej stronie
     </h1>
-    <script type="text/javascript" src="js/name.js"></script>
+  <ul id="Lista">
+  <li>item 0</li>
+  </ul>
+  <button id="addElem">
+    Dodaj
+  </button>
+  <script type="text/javascript" src="js/scripts.js"></script>
   </body>
 </html>
