--- a/index.html
+++ b/index.html
@@ -3,12 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title> Tytuł strony </title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css"> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    
   </head>
   <body>
-    <h1>
-      Witaj na mojej stronie
-    </h1>
-    <script type="text/javascript" src="js/name.js"></script>
+<div id="carousel">
+  <ul>
+  	<li>
+  		<div class="ramka"><img src="https://udemy-images.udemy.com/course/750x422/672274_cd11_2.jpg"></div>
+  	</li>
+  	<li>
+  		<div class="ramka"><img src="https://udemy-images.udemy.com/course/750x422/672274_cd11_2.jpg"></div>
+  	</li>
+  	<li>
+  		<div class="ramka"><img src="https://udemy-images.udemy.com/course/750x422/672274_cd11_2.jpg"></div>
+  	</li>
+  	<li>
+  		<div class="ramka"><img src="https://udemy-images.udemy.com/course/750x422/672274_cd11_2.jpg"></div>
+  	</li>
+  	<li>
+  		<div class="ramka"><img src="https://udemy-images.udemy.com/course/750x422/672274_cd11_2.jpg"></div>
+  	</li>
+  </ul>
+</div>
+    <script type="text/javascript" src="js/scripts.js"></script>
   </body>
 </html>
