--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	</div>
 	<div id="js-playerPickElement" class="container">
   <div class="row text-center">
-    <butto id="js-playerPick_rock" class="btn">
+    <button id="js-playerPick_rock" class="btn">
       <span class="badge">
         <i class="fa fa-hand-rock-o" aria-hidden="true"></i>
       </span>
