--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title> Tytuł strony </title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css"> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    
   </head>
   <body>
-    <h1>
-      Witaj na mojej stronie
-    </h1>
-    <script type="text/javascript" src="js/name.js"></script>
-  </body>
+
+
+
+    <script type="text/javascript" src="js/scripts.js"></script>
+</body>
 </html>
