--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!-- plik index.html -->
 <html>
   <head>
     <meta charset="utf-8">
     <title> Tytuł strony </title>
-    <link rel="stylesheet" href="css/style.css">
+   
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    
   </head>
-  <body>
-    <h1>
-      Witaj na mojej stronie
-    </h1>
-    <script type="text/javascript" src="js/name.js"></script>
-  </body>
+ <body>
+
+    <script type="text/javascript" src="js/scripts.js"></script>
+ </body>
 </html>
