--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
-<!-- plik index.html -->
 <html>
   <head>
     <meta charset="utf-8">
     <title> Tytuł strony </title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css"> 
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    
   </head>
-  <body>
-    <h1>
-      Witaj na mojej stronie
-    </h1>
-    <script type="text/javascript" src="js/name.js"></script>
-  </body>
+ <body>
+<h1>Wyszukiwarka krajów</h1>
+<button id="search">Szukaj kraju</button>
+<input id="country-name" type="text" />
+<h2>Lista krajów</h2>
+<ul id="countries">
+  <li>Brak danych</li>
+</ul>
+    <script type="text/javascript" src="js/scripts.js"></script>
+ </body>
 </html>
